Home page completed

--- a/events.html
+++ b/events.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Eventos - Photograpy Events</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <!-- Header -->
@@ -24,15 +26,15 @@
         <h1>Galeria de Fotos</h1>
         <div class="events">
             <div class="nightclub">
-                <img src="" alt="Nigthclub Photograpy">
+                <a href="./events/nightclub.html"><img src="./images/event1/capa.jpeg" alt="Nigthclub Photograpy"></a>
                 <p>Clube Noturno</p>
             </div>
             <div class="marriage">
-                <img src="" alt="Marriage Photograpy">
+                <a href="./events/marriage.html"><img src="./images/event2/capa.jpeg" alt="Marriage Photograpy"></a>
                 <p>Casamento</p>
             </div>
             <div class="party">
-                <img src="" alt="Bachelor Party Photograpy">
+                <a href="./events/party.html"><img src="./images/event3/capa.jpeg" alt="Bachelor Party Photograpy"></a>
                 <p>Despedida de Solteiro</p>
             </div>
         </div>
