--- a/events/nightclub.html
+++ b/events/nightclub.html
@@ -23,14 +23,14 @@
     <!-- End Header -->
     <section>
         <div class="gallery">
-            <img src="../images/event1/image1.jpg" alt="">
-            <img src="../images/event1/image2.jpg" alt="">
-            <img src="../images/event1/image3.jpg" alt="">
-            <img src="../images/event1/image4.jpg" alt="">
+            <img src="../images/event1/image1.jpeg" alt="">
+            <img src="../images/event1/image2.jpeg" alt="">
+            <img src="../images/event1/image3.jpeg" alt="">
+            <img src="../images/event1/image4.jpeg" alt="">
             <img src="../images/event1/image5.jpg" alt="">
-            <img src="../images/event1/image6.jpg" alt="">
+            <img src="../images/event1/image6.jpeg" alt="">
             <img src="../images/event1/image7.jpg" alt="">
-            <img src="../images/event1/image8.jpg" alt="">
+            <img src="../images/event1/image8.jpeg" alt="">
         </div>
     </section>
     <!-- Footer -->
