--- a/events/party.html
+++ b/events/party.html
@@ -23,13 +23,13 @@
     <!-- End Header -->
     <div class="gallery">
         <img src="../images/event3/image1.jpg" alt="">
-        <img src="../images/event3/image2.jpg" alt="">
+        <img src="../images/event3/image2.jpeg" alt="">
         <img src="../images/event3/image3.jpg" alt="">
         <img src="../images/event3/image4.jpg" alt="">
         <img src="../images/event3/image5.jpg" alt="">
         <img src="../images/event3/image6.jpg" alt="">
         <img src="../images/event3/image7.jpg" alt="">
-        <img src="../images/event3/image8.jpg" alt="">
+        <img src="../images/event3/image8.jpeg" alt="">
     </div>
     <!-- Footer -->
     <footer>
