--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>PHEvents - Agencia de Fotografia</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/home.css">
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
+
+    <!-- Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <!-- Header -->
@@ -20,19 +30,19 @@
     </header>
     <!-- End Header -->
     <!-- Main Section -->
-    <section>
+    <section id="home">
         <h1>Photografy Events</h1>
         <div id="main">
             <div class="image">
                 <img src="./images/home.png" alt="Photografy Events Image">
             </div>
             <div class="description">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio perferendis accusantium error, possimus provident assumenda deserunt odit delectus, impedit obcaecati neque labore repellat illo nostrum est ducimus exercitationem, vitae praesentium.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio perferendis accusantium error, possimus provident assumenda deserunt odit delectus, impedit obcaecati neque labore repellat illo nostrum est ducimus exercitationem, vitae praesentium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis sit eaque quaerat deserunt fugit vitae minus et. Quasi voluptatum, eos, possimus magni cum veritatis numquam autem asperiores tenetur maiores placeat. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit exercitationem voluptate ullam veniam dolorum maxime reiciendis reprehenderit rem quod animi incidunt molestias repellat quo enim dolorem odio, officiis ut ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos est odit dolorum quod amet, repudiandae perspiciatis numquam possimus, nobis quis quidem. Architecto, non velit. Qui libero pariatur dolorum laudantium voluptates?</p>
             </div>
         </div>
         <div id="sidebar">
-            <p>Veja Alguns eventos</p>
             <aside>
+                <p>Veja alguns eventos</p>
                 <a href="./events/marriage.html"><img src="./images/casamento.jpg" alt="Marriage Event"></a>
                 <a href="./events/party.html"><img src="./images/party.jpeg" alt="Bachelor Party"></a>
                 <a href="./events/nightclub.html"><img src="./images/nightclub.jpeg" alt="Party in Nigthclube"></a>
@@ -42,18 +52,20 @@
     <!-- End Main Section -->
     <!-- Footer -->
     <footer>
-        <ul class="map-menu">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./events.html">Eventos</a></li>
-            <li><a href="./contat.html">Contate-nos</a></li>    
-        </ul>
-        <ul>
-            <li><a href="#" target="_blank">Twitter</a></li>
-            <li><a href="#" target="_blank">Instagram</a></li>
-            <li><a href="#" target="_blank">Facebook</a></li>
-        </ul>
-        <div>
-            <p>Photografy Events. &copy; Copyright</p>
+        <div class="map-menu">
+            <ul class="map">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./events.html">Eventos</a></li>
+                <li><a href="./contat.html">Contate-nos</a></li>    
+            </ul>
+            <ul class="social">
+                <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+            </ul>
+        </div>
+        <div class="copyright">
+            <p>Direitos Reservados Photografy Events. &copy; Copyright</p>
         </div>
     </footer>
     <!-- End Footer -->
