--- a/events/marriage.html
+++ b/events/marriage.html
@@ -27,7 +27,7 @@
             <img src="../images/event2/image2.jpg" alt="">
             <img src="../images/event2/image3.jpg" alt="">
             <img src="../images/event2/image4.jpg" alt="">
-            <img src="../images/event2/image5.jpg" alt="">
+            <img src="../images/event2/image5.jpeg" alt="">
             <img src="../images/event2/image6.jpg" alt="">
             <img src="../images/event2/image7.jpg" alt="">
             <img src="../images/event2/image8.jpg" alt="">
