--- a/events/nightclub.html
+++ b/events/nightclub.html
@@ -7,6 +7,10 @@
     <title>Clube Noturno - Photografy Events</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/gallery.css">
+    
+    <!-- Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <!-- Header -->
@@ -35,18 +39,20 @@
     </section>
     <!-- Footer -->
     <footer>
-        <ul class="map-menu">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../events.html">Eventos</a></li>
-            <li><a href="../contat.html">Contate-nos</a></li>    
-        </ul>
-        <ul>
-            <li><a href="#" target="_blank">Twitter</a></li>
-            <li><a href="#" target="_blank">Instagram</a></li>
-            <li><a href="#" target="_blank">Facebook</a></li>
-        </ul>
-        <div>
-            <p>Photografy Events. &copy; Copyright</p>
+        <div class="map-menu">
+            <ul class="map">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../events.html">Eventos</a></li>
+                <li><a href="../contat.html">Contate-nos</a></li>    
+            </ul>
+            <ul class="social">
+                <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+            </ul>
+        </div>
+        <div class="copyright">
+            <p>Direitos Reservados Photografy Events. &copy; Copyright</p>
         </div>
     </footer>
     <!-- End Footer -->
