--- a/contat.html
+++ b/contat.html
@@ -8,20 +8,24 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="css/formcontato.css">
-
+  
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif&display=swap" rel="stylesheet">
+
+    <!-- Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <!-- Header -->
     <header>
         <nav id="nav-menu">
             <h1 id="logo"><a href="./index.html">PHEvents</a></h1>
-            <ul class="menu">
+            <ul class="menu hidden">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./events.html">Eventos</a></li>
                 <li><a href="./contat.html">Contate-nos</a></li>
             </ul>
+            <button class="btn-menu"><i class="fa fa-align-justify"></i></button>
         </nav>
     </header>
     <!-- End Header -->
@@ -65,18 +69,20 @@
     <!-- End Section -->
     <!-- Footer -->
     <footer>
-        <ul class="map-menu">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./events.html">Eventos</a></li>
-            <li><a href="./contat.html">Contate-nos</a></li>    
-        </ul>
-        <ul>
-            <li><a href="#" target="_blank">Twitter</a></li>
-            <li><a href="#" target="_blank">Instagram</a></li>
-            <li><a href="#" target="_blank">Facebook</a></li>
-        </ul>
-        <div>
-            <p>Photografy Events. &copy; Copyright</p>
+        <div class="map-menu">
+            <ul class="map">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./events.html">Eventos</a></li>
+                <li><a href="./contat.html">Contate-nos</a></li>    
+            </ul>
+            <ul class="social">
+                <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+            </ul>
+        </div>
+        <div class="copyright">
+            <p>Direitos Reservados Photografy Events. &copy; Copyright</p>
         </div>
     </footer>
     <!-- End Footer -->
@@ -85,5 +91,6 @@
     <script src="./javascript/contat/caracters.js"></script>
     <script src="./javascript/contat/validacoes.js"></script>
     <script src="./javascript/contat/script.js"></script>
+    <script src="./javascript/btnMenu.js"></script>
 </body>
 </html>
