--- a/events/marriage.html
+++ b/events/marriage.html
@@ -17,11 +17,12 @@
     <header>
         <nav id="nav-menu">
             <h1 id="logo"><a href="../index.html">PHEvents</a></h1>
-            <ul class="menu">
+            <ul class="menu hidden">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../events.html">Eventos</a></li>
                 <li><a href="../contat.html">Contate-nos</a></li>
             </ul>
+            <button class="btn-menu"><i class="fa fa-align-justify"></i></button>
         </nav>
     </header>
     <!-- End Header -->
@@ -56,5 +57,7 @@
         </div>
     </footer>
     <!-- End Footer -->
+    <!-- Script -->
+    <script src="../javascript/btnMenu.js"></script>
 </body>
 </html>
