--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
     <header>
         <nav id="nav-menu">
             <h1 id="logo"><a href="./index.html">PHEvents</a></h1>
-            <ul class="menu">
+            <ul class="menu hidden">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./events.html">Eventos</a></li>
                 <li><a href="./contat.html">Contate-nos</a></li>
             </ul>
+            <button class="btn-menu"><i class="fa fa-align-justify"></i></button>
         </nav>
     </header>
     <!-- End Header -->
     <!-- Main Section -->
+    <h1 class="title">Photografy Events</h1>
     <section id="home">
-        <h1>Photografy Events</h1>
         <div id="main">
             <div class="image">
                 <img src="./images/home.png" alt="Photografy Events Image">
@@ -41,8 +42,8 @@
             </div>
         </div>
         <div id="sidebar">
+            <p>Veja alguns eventos</p>
             <aside>
-                <p>Veja alguns eventos</p>
                 <a href="./events/marriage.html"><img src="./images/casamento.jpg" alt="Marriage Event"></a>
                 <a href="./events/party.html"><img src="./images/party.jpeg" alt="Bachelor Party"></a>
                 <a href="./events/nightclub.html"><img src="./images/nightclub.jpeg" alt="Party in Nigthclube"></a>
@@ -69,5 +70,7 @@
         </div>
     </footer>
     <!-- End Footer -->
+    <!-- Scripts -->
+    <script src="./javascript/btnMenu.js"></script>
 </body>
 </html>
